fix: do not apply color to all -wrap elements inside containers
closes https://github.com/telerik/kendo-theme-default/issues/872

--- a/packages/default/scss/common/_forms.scss
+++ b/packages/default/scss/common/_forms.scss
@@ -304,7 +304,11 @@ $forms-invalid-color: $error !default;
             border-color: $invalid-border;
         }
 
-        > [class*="-wrap"] {
+        > .k-dateinput-wrap,
+        > .k-dropdown-wrap,
+        > .k-picker-wrap,
+        > .k-multiselect-wrap,
+        > .k-numeric-wrap {
             color: $forms-invalid-color;
             border-color: $invalid-border;
         }
